--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
 			<div class="calculator-container">
 				<div class="calculator-display"></div>
 				<div class="calculator-buttons">
-					<div id="btn-all-clear">AC</div>
-					<div id="btn-delete">DEL</div>
-					<div class="btn-operator">/</div>
-					<button class="btn-number">1</button>
-					<button class="btn-number">2</button>
-					<button class="btn-number">3</button>
-					<div class="btn-operator">*</div>
-					<button class="btn-number">4</button>
-					<button class="btn-number">5</button>
-					<button class="btn-number">6</button>
-					<div class="btn-operator">+</div>
-					<button class="btn-number">7</button>
-					<button class="btn-number">8</button>
-					<button class="btn-number">9</button>
-					<div class="btn-operator">-</div>
-					<button class="btn-number">.</button>
-					<button class="btn-number">0</button>
-					<div class="btn-operator">=</div>
+					<button id="btn-all-clear" class="calculator-btn">AC</button>
+					<button id="btn-delete" class="calculator-btn">DEL</button>
+					<button class="calculator-btn btn-operator">/</button>
+					<button class="calculator-btn btn-number">1</button>
+					<button class="calculator-btn btn-number">2</button>
+					<button class="calculator-btn btn-number">3</button>
+					<button class="calculator-btn btn-operator">*</button>
+					<button class="calculator-btn btn-number">4</button>
+					<button class="calculator-btn btn-number">5</button>
+					<button class="calculator-btn btn-number">6</button>
+					<button class="calculator-btn btn-operator">+</button>
+					<button class="calculator-btn btn-number">7</button>
+					<button class="calculator-btn btn-number">8</button>
+					<button class="calculator-btn btn-number">9</button>
+					<button class="calculator-btn btn-operator">-</button>
+					<button class="calculator-btn btn-number">.</button>
+					<button class="calculator-btn btn-number">0</button>
+					<button id="btn-equals" class="calculator-btn btn-operator">=</button>
 				</div>
 			</div>
 		</div>
