Add logic to evaluate expressions in index.js

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<button class="calculator-btn btn-operator">-</button>
 					<button class="calculator-btn btn-number">.</button>
 					<button class="calculator-btn btn-number">0</button>
-					<button id="btn-equals" class="calculator-btn btn-operator">=</button>
+					<button id="btn-equals" class="calculator-btn">=</button>
 				</div>
 			</div>
 		</div>
